# g474re_nucleo_robo_rs

./: .gitignore  Cargo.toml  Embed.toml  README.md
.cargo/: config
.github/workflows/: rust.yml
examples/: adc_dma_rtic.rs  blinky.rs  blinky_rtic.rs  serial_rtic.rs  ssd1306_rtic.rs  tim_adc_dma_rtic.rs  tim_adc_rtic.rs  tle5012_rtic.rs  ushell_rtic.rs  ushell_rtic_app.rs
examples/motor_drive_rtic/: shell.rs
examples/utils/: logger.rs  mod.rs
src/: main.rs  shell.rs
