[package]
name = "g474re_nucleo_robo_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nb = "0.1.1"
stm32g4 = "0.15.1"
paste = "1.0"
bitflags = "1.2"
vcell = "0.1"
panic-halt = "0.2.0"
static_assertions = "1.1"
cortex-m-rt = "0.7.2"
defmt-rtt = "0.4.0"
log = "0.4.11"
cortex-m-log = { version = "0.7", features = ["log-integration"] }
cfg-if = "0.1.10"
rtt-target = { version = "0.3.0", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
defmt = "0.3.2"
cortex-m-rtic = "1.1.3"
ushell = "0.3.5"
dwt-systick-monotonic = "1.1"
btoi = { version = "0.4.2", default-features = false }
embedded-hal = "0.2.7"
tle5012 = "0.1.0"
ssd1306 = "0.7.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"

# float parser/writter
[dependencies.lexical-core]
version = "0.8.5"
default-features = false
features = ["write-floats", "parse-floats"]

[dependencies.stm32g4xx-hal]
version = "0.0.2"
features = ["stm32g474", "rt"]
git = "https://github.com/stm32-rs/stm32g4xx-hal"
# path = "../stm32g4xx-hal"

[profile.dev]
codegen-units = 1
debug = true
incremental = false
lto = false

[profile.release]
opt-level = 'z'
debug = false
codegen-units = 1
incremental = false
lto = true